--- a/package.json
+++ b/package.json
@@ -11,7 +11,12 @@
     "url": "git+https://github.com/evannorton/Linter.git"
   },
   "dependencies": {
-    "eslint": "8.55.0"
+    "@typescript-eslint/eslint-plugin": "5.59.6",
+    "@typescript-eslint/parser": "5.59.6",
+    "eslint": "8.55.0",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-prettier": "5.0.1",
+    "eslint-plugin-sort-imports-es6-autofix": "0.6.0"
   },
   "author": "Evan Norton",
   "license": "MIT",
